--- a/LightControl.WebApp/Properties/launchSettings.json
+++ b/LightControl.WebApp/Properties/launchSettings.json
@@ -3,15 +3,22 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:19803",
-      "sslPort": 44381
+      "applicationUrl": "http://localhost:8696",
+      "sslPort": 44393
     }
   },
   "profiles": {
+    "IIS Express": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
     "LightControl.WebApp": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://*:5001;http://*:5000",
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
