--- a/LightControl.Api/Properties/launchSettings.json
+++ b/LightControl.Api/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "LightControl.Api": {
       "commandName": "Project",
       "launchBrowser": false,
-      "applicationUrl": "https://*:5001;http://*:5000",
+      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
