--- a/src/LightControl.Api.Unittest/LightControl.Api.Unittest.csproj
+++ b/src/LightControl.Api.Unittest/LightControl.Api.Unittest.csproj
@@ -11,6 +11,11 @@
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.0.1" />
+    <PackageReference Include="FluentAssertions" Version="5.10.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LightControl.Api\LightControl.Api.csproj" />
   </ItemGroup>
 
 </Project>
