--- a/src/LightControl.Api.Unittest/LightControl.Api.Unittest.csproj
+++ b/src/LightControl.Api.Unittest/LightControl.Api.Unittest.csproj
@@ -16,6 +16,7 @@
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
         <PackageReference Include="coverlet.collector" Version="1.0.1" />
         <PackageReference Include="FluentAssertions" Version="5.10.3" />
+        <PackageReference Include="MartinCostello.Logging.XUnit" Version="0.1.0"/>
     </ItemGroup>
 
     <ItemGroup>
