--- a/src/LightControl.Api/LightControl.Api.csproj
+++ b/src/LightControl.Api/LightControl.Api.csproj
@@ -6,6 +6,13 @@
 
     <ItemGroup>
         <PackageReference Include="Iot.Device.Bindings" Version="1.0.0" />
+        <PackageReference Include="Serilog" Version="2.9.0" />
+        <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
+        <PackageReference Include="Serilog.Enrichers.Environment" Version="2.1.3" />
+        <PackageReference Include="Serilog.Enrichers.Thread" Version="3.1.0" />
+        <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
+        <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+        <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
         <PackageReference Include="System.Device.Gpio" Version="1.0.0" />
     </ItemGroup>
 
