--- a/src/LightControl.Api/appsettings.json
+++ b/src/LightControl.Api/appsettings.json
@@ -1,10 +1,25 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+  "AllowedHosts": "*",
+  "Serilog": {
+    "Using":  ["Serilog.Sinks.File"],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      { "Name": "File", 
+        "Args": {
+          "path": "/var/log/light-controller/log-.log",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 7
+        }
+      }
+    ],
+    "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"],
+    "Destructure": [
+      { "Name": "ToMaximumDepth", "Args": { "maximumDestructuringDepth": 4 } },
+      { "Name": "ToMaximumStringLength", "Args": { "maximumStringLength": 100 } },
+      { "Name": "ToMaximumCollectionCount", "Args": { "maximumCollectionCount": 10 } }
+    ],
+    "Properties": {
+      "Application": "Lego Light Controller"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
