Update of log settings

--- a/src/LightControl.Api/appsettings.json
+++ b/src/LightControl.Api/appsettings.json
@@ -6,9 +6,10 @@
     "WriteTo": [
       { "Name": "File", 
         "Args": {
-          "path": "/var/log/light-controller/log-.log",
+          "path": "/var/log/light-ctl/daily-.log",
           "rollingInterval": "Day",
-          "retainedFileCountLimit": 7
+          "retainedFileCountLimit": 7,
+          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
         }
       }
     ],
