--- a/src/LightControl.Api/appsettings.Development.json
+++ b/src/LightControl.Api/appsettings.Development.json
@@ -20,5 +20,9 @@
     "Properties": {
       "Application": "Lego Light Controller"
     }
+  },
+  "HardwareOptions" :
+  {
+    "ConfigurationFilepath": "./hardware/hardware.json"
   }
 }
