--- a/src/LightControl.Api/appsettings.json
+++ b/src/LightControl.Api/appsettings.json
@@ -22,5 +22,9 @@
     "Properties": {
       "Application": "Lego Light Controller"
     }
+  },
+  "HardwareOptions" : 
+  {
+    "ConfigurationFilepath": "./hardware/hardware.json"
   }
 }
