Implemented file-based hardware configuration

--- a/src/LightControl.Api.Unittest/LightControl.Api.Unittest.csproj
+++ b/src/LightControl.Api.Unittest/LightControl.Api.Unittest.csproj
@@ -24,8 +24,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <None Update="Hardware\hardware.json">
-        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <None Update="File\dummy_hardware.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
     </ItemGroup>
 
