--- a/src/LightControl.Api/appsettings.json
+++ b/src/LightControl.Api/appsettings.json
@@ -25,6 +25,6 @@
   },
   "HardwareOptions" : 
   {
-    "ConfigurationFilepath": "./hardware/hardware.json"
+    "ConfigurationFilepath": "./File/hardware.json"
   }
 }
