Client configuration 1st step

--- a/src/LightControl.Api.Unittest/LightControl.Api.Unittest.csproj
+++ b/src/LightControl.Api.Unittest/LightControl.Api.Unittest.csproj
@@ -29,4 +29,12 @@
       </None>
     </ItemGroup>
 
+    <ItemGroup>
+      <Content Include="File\ModularBuildings.json">
+        <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+      </Content>
+    </ItemGroup>
+
 </Project>
