Full code cleanup and reformat

--- a/src/LightControl.Api/appsettings.Development.json
+++ b/src/LightControl.Api/appsettings.Development.json
@@ -1,6 +1,8 @@
 {
   "Serilog": {
-    "Using":  ["Serilog.Sinks.Console"],
+    "Using": [
+      "Serilog.Sinks.Console"
+    ],
     "MinimumLevel": "Information",
     "WriteTo": [
       {
@@ -11,18 +13,36 @@
         }
       }
     ],
-    "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithThreadId"
+    ],
     "Destructure": [
-      { "Name": "ToMaximumDepth", "Args": { "maximumDestructuringDepth": 4 } },
-      { "Name": "ToMaximumStringLength", "Args": { "maximumStringLength": 100 } },
-      { "Name": "ToMaximumCollectionCount", "Args": { "maximumCollectionCount": 10 } }
+      {
+        "Name": "ToMaximumDepth",
+        "Args": {
+          "maximumDestructuringDepth": 4
+        }
+      },
+      {
+        "Name": "ToMaximumStringLength",
+        "Args": {
+          "maximumStringLength": 100
+        }
+      },
+      {
+        "Name": "ToMaximumCollectionCount",
+        "Args": {
+          "maximumCollectionCount": 10
+        }
+      }
     ],
     "Properties": {
       "Application": "Lego Light Controller"
     }
   },
-  "HardwareOptions" :
-  {
+  "HardwareOptions": {
     "ConfigurationFilepath": "./File/dummy_hardware.json"
   }
 }
