--- a/src/LightControl.Api/appsettings.json
+++ b/src/LightControl.Api/appsettings.json
@@ -1,10 +1,13 @@
 {
   "AllowedHosts": "*",
   "Serilog": {
-    "Using":  ["Serilog.Sinks.File"],
+    "Using": [
+      "Serilog.Sinks.File"
+    ],
     "MinimumLevel": "Information",
     "WriteTo": [
-      { "Name": "File", 
+      {
+        "Name": "File",
         "Args": {
           "path": "/var/log/light-ctl/daily-.log",
           "rollingInterval": "Day",
@@ -13,18 +16,36 @@
         }
       }
     ],
-    "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithThreadId"
+    ],
     "Destructure": [
-      { "Name": "ToMaximumDepth", "Args": { "maximumDestructuringDepth": 4 } },
-      { "Name": "ToMaximumStringLength", "Args": { "maximumStringLength": 100 } },
-      { "Name": "ToMaximumCollectionCount", "Args": { "maximumCollectionCount": 10 } }
+      {
+        "Name": "ToMaximumDepth",
+        "Args": {
+          "maximumDestructuringDepth": 4
+        }
+      },
+      {
+        "Name": "ToMaximumStringLength",
+        "Args": {
+          "maximumStringLength": 100
+        }
+      },
+      {
+        "Name": "ToMaximumCollectionCount",
+        "Args": {
+          "maximumCollectionCount": 10
+        }
+      }
     ],
     "Properties": {
       "Application": "Lego Light Controller"
     }
   },
-  "HardwareOptions" : 
-  {
+  "HardwareOptions": {
     "ConfigurationFilepath": "./File/hardware.json"
   }
 }
