--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -1,4 +1,4 @@
-name: .NET Core
+name: .NET
 
 on:
   push:
@@ -12,12 +12,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Setup .NET Core
-      uses: actions/setup-dotnet@v1
+    - uses: actions/checkout@v3
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 7.*
-    - name: Build with dotnet
-      run: dotnet build --configuration Release LightControl.sln
+    - name: Restore dependencies
+      run: dotnet restore
+    - name: Build 
+      run: dotnet build --no-restore --configuration Release LightControl.sln
     - name: Run unit tests
-      run: dotnet test
+      run: dotnet test --no-build --verbosity normal
+    - name: Publish
+      run: dotnet publish --configuration Release --runtime linux-arm --self-contained true -o website
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v3.1.2
+      with:
+        name: website
+        path: light-control-api/website/**
+        if-no-files-found: Error
