--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Run unit tests
       run: dotnet test
     - name: Publish
-      run: dotnet publish light-control-api/light-control-api/src/LightControl.Api/LightControl.Api.csproj --configuration Release --runtime linux-arm --self-contained true -o website
+      run: dotnet publish src/LightControl.Api/LightControl.Api.csproj --configuration Release --runtime linux-arm --self-contained true -o website
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.2
       with:
