--- a/src/LightControl.Api/appsettings.Development.json
+++ b/src/LightControl.Api/appsettings.Development.json
@@ -1,45 +1,16 @@
 {
-  "Serilog": {
-    "Using": [
-      "Serilog.Sinks.Console"
-    ],
-    "MinimumLevel": "Information",
-    "WriteTo": [
-      {
-        "Name": "Console",
-        "Args": {
-          "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
-          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} <s:{SourceContext}>{NewLine}{Exception}"
-        }
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    },
+    "Console": {
+      "FormatterName": "simple",
+      "FormatterOptions": {
+        "SingleLine": true,
+        "IncludeScopes": true,
+        "TimestampFormat": "HH:mm:ss "
       }
-    ],
-    "Enrich": [
-      "FromLogContext",
-      "WithMachineName",
-      "WithThreadId"
-    ],
-    "Destructure": [
-      {
-        "Name": "ToMaximumDepth",
-        "Args": {
-          "maximumDestructuringDepth": 4
-        }
-      },
-      {
-        "Name": "ToMaximumStringLength",
-        "Args": {
-          "maximumStringLength": 100
-        }
-      },
-      {
-        "Name": "ToMaximumCollectionCount",
-        "Args": {
-          "maximumCollectionCount": 10
-        }
-      }
-    ],
-    "Properties": {
-      "Application": "Lego Light Controller"
     }
   },
   "HardwareOptions": {
