--- a/src/LightControl.Api/appsettings.json
+++ b/src/LightControl.Api/appsettings.json
@@ -1,48 +1,9 @@
 {
   "AllowedHosts": "*",
-  "Serilog": {
-    "Using": [
-      "Serilog.Sinks.File"
-    ],
-    "MinimumLevel": "Information",
-    "WriteTo": [
-      {
-        "Name": "File",
-        "Args": {
-          "path": "/var/log/light-ctl/daily-.log",
-          "rollingInterval": "Day",
-          "retainedFileCountLimit": 7,
-          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
-        }
-      }
-    ],
-    "Enrich": [
-      "FromLogContext",
-      "WithMachineName",
-      "WithThreadId"
-    ],
-    "Destructure": [
-      {
-        "Name": "ToMaximumDepth",
-        "Args": {
-          "maximumDestructuringDepth": 4
-        }
-      },
-      {
-        "Name": "ToMaximumStringLength",
-        "Args": {
-          "maximumStringLength": 100
-        }
-      },
-      {
-        "Name": "ToMaximumCollectionCount",
-        "Args": {
-          "maximumCollectionCount": 10
-        }
-      }
-    ],
-    "Properties": {
-      "Application": "Lego Light Controller"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
   },
   "HardwareOptions": {
